# simple-ogl

./: .gitignore  AABB.h  Box.h  CMakeLists.txt  DooSabin.cpp  DooSabin.h  Engine.cpp  Engine.h  EngineFacede.cpp  EngineFacede.h  Matrix.h  Mesh.cpp  Mesh.h  Point.h  Renderer.cpp  Renderer.h  RendererFacede.h  african.ply  cube.ply  cut.ply  dataset.h  light.frag  lines.geom  main.cpp  shader.frag  shader.vert  suzanne.ply  teapot.ply  tee.ply  tee2.ply  test.cpp  tinyfiledialogs.c  tinyfiledialogs.h  transform.vert  triangles.geom
